WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57653
Shockwave plug-in doesn't accept mouse events
https://bugs.webkit.org/show_bug.cgi?id=57653
Summary
Shockwave plug-in doesn't accept mouse events
Anders Carlsson
Reported
2011-04-01 13:06:22 PDT
Shockwave plug-in doesn't accept mouse events
Attachments
Patch
(1.23 KB, patch)
2011-04-01 13:07 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(16.20 KB, patch)
2011-04-01 14:35 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-04-01 13:07:49 PDT
Created
attachment 87903
[details]
Patch
Sam Weinig
Comment 2
2011-04-01 13:12:30 PDT
Comment on
attachment 87903
[details]
Patch Anders promises a test.
Anders Carlsson
Comment 3
2011-04-01 14:35:07 PDT
Created
attachment 87916
[details]
Patch
Anders Carlsson
Comment 4
2011-04-01 14:55:28 PDT
Committed
r82723
: <
http://trac.webkit.org/changeset/82723
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug