2011-04-01  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Shockwave plug-in doesn't accept mouse events
        https://bugs.webkit.org/show_bug.cgi?id=57653
        <rdar://problem/8483273>

        Fix an unrelated bug found by the added test.

        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView convertFromX:andY:space:toX:andY:space:]):
        Make sure to always set destX and destY.
2011-04-01  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Shockwave plug-in doesn't accept mouse events
        https://bugs.webkit.org/show_bug.cgi?id=57653
        <rdar://problem/8483273>

        Add a missing break.

        * WebProcess/Plugins/Netscape/mac/NetscapePluginMac.mm:
        (WebKit::NetscapePlugin::convertPoint):
2011-04-01  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Shockwave plug-in doesn't accept mouse events
        https://bugs.webkit.org/show_bug.cgi?id=57653
        <rdar://problem/8483273>

        Add test.

        * platform/mac/plugins/convert-point-expected.txt: Added.
        * platform/mac/plugins/convert-point.html: Added.
2011-02-09  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Repro crash with Sony Google TV ad at Gizmodo
        https://bugs.webkit.org/show_bug.cgi?id=54150
        <rdar://problem/8782346>

        Add a new plug-in test that runs JavaScript that destroys the plug-in from within its NPN_DestroyStream callback.

        * DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj:
        * DumpRenderTree/TestNetscapePlugIn/Tests/EvaluateJSDestroyingPluginFromDestroyStream.cpp: Added.
        (EvaluateJSDestroyingPluginFromDestroyStream::EvaluateJSDestroyingPluginFromDestroyStream):
        (EvaluateJSDestroyingPluginFromDestroyStream::NPP_Destroy):
        (EvaluateJSDestroyingPluginFromDestroyStream::NPP_DestroyStream):
        * DumpRenderTree/TestNetscapePlugIn/win/TestNetscapePlugin.vcproj:
        * DumpRenderTree/qt/TestNetscapePlugin/TestNetscapePlugin.pro:



Canonical link: https://commits.webkit.org/72512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82723 268f45cc-cd09-0410-ab3c-d52691b4dbfc