Tools/DumpRenderTree/TestNetscapePlugIn/PluginTest.cpp
@@ -69,6 +69,18 @@ void PluginTest::registerNPShutdownFunction(void (*func)())
     shutdownFunction = func;
 }
 
+void PluginTest::indicateTestFailure()
+{
+    // This should really be an assert, but there's no way for the test framework
+    // to know that the plug-in process crashed, so we'll just sleep for a while
+    // to ensure that the test times out.
+#if defined(XP_WIN)
+    ::Sleep(100000);
+#else
+    sleep(1000);
+#endif
+}
+
 NPError PluginTest::NPP_New(NPMIMEType pluginType, uint16_t mode, int16_t argc, char *argn[], char *argv[], NPSavedData *saved)
 {
     return NPERR_NO_ERROR;
@@ -134,6 +146,13 @@ bool PluginTest::NPN_RemoveProperty(NPObject* npObject, NPIdentifier propertyNam
 {
     return browser->removeproperty(m_npp, npObject, propertyName);
 }
+
+#ifdef XP_MACOSX
+bool PluginTest::NPN_ConvertPoint(double sourceX, double sourceY, NPCoordinateSpace sourceSpace, double *destX, double *destY, NPCoordinateSpace destSpace)
+{
+    return browser->convertpoint(m_npp, sourceX, sourceY, sourceSpace, destX, destY, destSpace);
+}
+#endif
 
 void PluginTest::executeScript(const char* script)
 {
